This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix possible ref. leaks in _sqlite3 module initialisation
Type: behavior Stage: resolved
Components: Library (Lib) Versions: Python 3.10, Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: berker.peksag, corona10, erlendaasland
Priority: normal Keywords: patch

Created on 2020-10-12 19:18 by erlendaasland, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 22673 merged erlendaasland, 2020-10-12 19:22
Messages (2)
msg378516 - (view) Author: Erlend E. Aasland (erlendaasland) * (Python triager) Date: 2020-10-12 19:18
Handle PyDict_SetItemString() errors in _sqlite3 init by dereferencing the item object and then goto error.
msg378680 - (view) Author: Dong-hee Na (corona10) * (Python committer) Date: 2020-10-15 12:20
New changeset 644e94272a89196801825cb69a56377bf62d256a by Erlend Egeberg Aasland in branch 'master':
bpo-42021: Fix possible ref leaks during _sqlite3 module init (GH-22673)
https://github.com/python/cpython/commit/644e94272a89196801825cb69a56377bf62d256a
History
Date User Action Args
2022-04-11 14:59:36adminsetgithub: 86187
2020-10-15 12:22:02erlendaaslandsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2020-10-15 12:20:44corona10setnosy: + corona10
messages: + msg378680
2020-10-12 19:44:20erlendaaslandsetnosy: + berker.peksag
2020-10-12 19:43:57erlendaaslandsettype: behavior
2020-10-12 19:22:59erlendaaslandsetkeywords: + patch
stage: patch review
pull_requests: + pull_request21647
2020-10-12 19:18:40erlendaaslandcreate