bpo-42021: Fix possible ref leaks during _sqlite3 module init (GH-22673)